Change the viewport meta tag

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/datepicker.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-
   </head>
   <body>
     <div id="bg-overlay"></div>
@@ -39,46 +38,13 @@
             </div>
           </div>
         </div>
-
-
         <div id="todo-task-list" class="task-list">
-          <ul id="listOfTasks">
-            <!-- <li class="taskItem">
-              <span class="itemCheckbox"><i class="fa fa-square-o" aria-hidden="true"></i></span>
-              <span class="itemContent">My third task item</span>
-              <span class="deleteItem"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
-              <span class="editItem"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></span>
-              <span class="itemDate">06/5/2017</span>
-            </li>
-            <li class="taskItem">
-              <span class="itemCheckbox"><i class="fa fa-square-o" aria-hidden="true"></i></span>
-              <span class="itemContent">My fourth task item</span>
-              <span class="deleteItem"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
-              <span class="editItem"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></span>
-              <span class="itemDate">06/6/2017</span>
-            </li> -->
-          </ul>
+          <ul id="listOfTasks"></ul>
         </div>
-
         <button type="button" id="viewCompletedBtn">Show Completed Tasks</button>
-
         <div id="completed-task-list" class="task-list">
-          <ul id="listOfCompletedTasks">
-            <!-- <li>
-              <a class="completedCheckbox" href="">
-                <span><i class="fa fa-check-square-o" aria-hidden="true"></i></span>
-              </a>
-              <span class="completedItemContent">My first task item</span>
-            </li>
-            <li>
-              <a class="completedCheckbox" href="">
-                <span><i class="fa fa-check-square-o" aria-hidden="true"></i></span>
-              </a>
-              <span class="completedItemContent">My second task item</span>
-            </li> -->
-          </ul>
+          <ul id="listOfCompletedTasks"></ul>
         </div>
-
       </section>
     </div>
 
@@ -88,6 +54,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"  integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="  crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/script.js"></script>
-
   </body>
 </html>
